Estilos CSS a la navegación

--- a/css/styles.css
+++ b/css/styles.css
@@ -26,3 +26,16 @@ body {
 .titulo span {
   font-size: 2rem;
 }
+
+.contenedor {
+  width: 120rem;
+  /*centrar elementos*/
+
+  margin: 0 auto;
+}
+
+.nav-bg {
+  background-color: var(--secundario);
+}
+.navegacion-principal {
+}
