--- a/css/styles.css
+++ b/css/styles.css
@@ -85,5 +85,13 @@ body {
   background-repeat: no-repeat; /*para no repetir la imagen si no ocupa todo el espacio*/
   background-size: cover; /*se agranda la imagen para coincidir  a lo ancho*/
   height: 410px;
-  padding: 20px;
+  position: relative;
+}
+
+.contenido-hero {
+  position: absolute;
+  background-color: rgba(0, 0, 0, 0.7); /* forma anterior*/
+  background-color: rgb(0 0 0 / 70%);
+  width: 100%;
+  height: 100%;
 }
