--- a/css/styles.css
+++ b/css/styles.css
@@ -26,9 +26,23 @@ body {
   font-family: "Krub", sans-serif; /*aplica a todos los elementos de la pagina*/
 }
 
-.titulo {
+/*una buena practica ir de lo mas general a lo mas especifico*/
+h1 {
+  font-size: 3.8rem;
+}
+
+h2 {
+  font-size: 2.8rem;
+}
+
+h3 {
+  font-size: 1.8rem;
+}
+
+h1,
+h2,
+h3 {
   text-align: center;
-  font-size: var(--fuente-principal);
 }
 
 .titulo span {
@@ -94,4 +108,18 @@ body {
   background-color: rgb(0 0 0 / 70%);
   width: 100%;
   height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.contenido-hero h2,
+.contenido-hero p {
+  color: var(--blanco);
+}
+
+.ubicacion {
+  display: flex;
+  align-items: flex-end;
 }
