--- a/css/styles.css
+++ b/css/styles.css
@@ -5,14 +5,15 @@
   --primario: #ffc107;
   --secundario: #0097a7;
   --gris: #757575;
+  --grisClaro: #dfe9f3;
 
   --fuente-principal: 3.8rem;
 }
-
+/* Globales */
 /*permite adaptar tamtañp de texto a todos los dispositivos*/
 html {
   font-size: 62.5%;
-  box-sizing: border-box; /*resolver problema de calcular padding*/
+  box-sizing: border-box; /*Hack Box Model, resolver problema de calcular padding*/
 }
 /*resolver problema de calcular padding, que no excede el tamaño que definimos con weight*/
 *, /* * selecciona todos los elementos de html , aplica las mismas reglas a diferentes selectores*/
@@ -24,29 +25,11 @@ html {
 body {
   font-size: 16px; /* 1rem = 10px*/
   font-family: "Krub", sans-serif; /*aplica a todos los elementos de la pagina*/
-}
-
-/*una buena practica ir de lo mas general a lo mas especifico*/
-h1 {
-  font-size: 3.8rem;
-}
-
-h2 {
-  font-size: 2.8rem;
-}
-
-h3 {
-  font-size: 1.8rem;
-}
-
-h1,
-h2,
-h3 {
-  text-align: center;
-}
-
-.titulo span {
-  font-size: 2rem;
+  background-image: linear-gradient(
+    to top,
+    var(--grisClaro) 0%,
+    var(--blanco) 100%
+  ); /*crear fondo con degradado*/
 }
 
 .contenedor {
@@ -75,6 +58,32 @@ h3 {
     width: auto;
   }
 }
+/* Tipografia */
+/*una buena practica ir de lo mas general a lo mas especifico*/
+h1 {
+  font-size: 3.8rem;
+}
+
+h2 {
+  font-size: 2.8rem;
+}
+
+h3 {
+  font-size: 1.8rem;
+}
+
+h1,
+h2,
+h3 {
+  text-align: center;
+}
+
+/* Titulos */
+.titulo span {
+  font-size: 2rem;
+}
+
+/* Navegacion Principal */
 .nav-bg {
   /*se esta ultilizando un estilo de UTILIDADES para escriir codigo CSS*/
   background-color: var(--secundario);
@@ -108,11 +117,7 @@ h3 {
   color: var(--oscuro);
 }
 
-@media (min-width: 480px) {
-  h1 {
-  }
-}
-
+/* Hero */
 .hero {
   background-image: url(../img/hero.jpg);
   background-repeat: no-repeat; /*para no repetir la imagen si no ocupa todo el espacio*/
@@ -138,7 +143,7 @@ h3 {
   color: var(--blanco);
 }
 
-.ubicacion {
+.contenido-hero .ubicacion {
   display: flex;
   align-items: flex-end;
 }
