--- a/css/styles.css
+++ b/css/styles.css
@@ -58,6 +58,15 @@ body {
     width: auto;
   }
 }
+
+.sombra {
+  -webkit-box-shadow: 0px 5px 15px 0px rgba(112, 112, 112, 0.48);
+  -moz-box-shadow: 0px 5px 15px 0px rgba(112, 112, 112, 0.48);
+  box-shadow: 0px 5px 15px 0px rgba(112, 112, 112, 0.48);
+  background-color: var(--blanco);
+  padding: 2rem;
+  border-radius: 1rem;
+}
 /* Tipografia */
 /*una buena practica ir de lo mas general a lo mas especifico*/
 h1 {
@@ -124,6 +133,7 @@ h3 {
   background-size: cover; /*se agranda la imagen para coincidir  a lo ancho*/
   height: 410px;
   position: relative;
+  margin-bottom: 2rem;
 }
 
 .contenido-hero {
