--- a/css/styles.css
+++ b/css/styles.css
@@ -164,5 +164,29 @@ h3 {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr; /* 1fr=33.3% divide el 100% en 3 fracciones*/
     /* grid-template-columns: repeat(3, 1fr); */
+    column-gap: 1rem; /*añade espacio entre columnas a cada lado siendo 1 rem el total*/
   }
+}
+
+.servicio {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.servicio h3 {
+  color: var(--secundario);
+  font-weight: normal;
+}
+.servicio p {
+  line-height: 2;
+  text-align: center;
+}
+.servicio .iconos {
+  height: 15rem;
+  width: 15rem;
+  background-color: var(--primario);
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
 }
