--- a/css/styles.css
+++ b/css/styles.css
@@ -151,7 +151,7 @@ h3 {
 
 /* Hero */
 .hero {
-  background-image: url(../img/hero.jpg);
+  background-image: url(/img/hero.jpg);
   background-repeat: no-repeat; /*para no repetir la imagen si no ocupa todo el espacio*/
   background-size: cover; /*se agranda la imagen para coincidir  a lo ancho*/
   height: 410px;
